[gd_scene load_steps=20 format=2]

[ext_resource path="res://global/objects/ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://online_mode/level_editor/scripts/TabContainer.gd" type="Script" id=2]
[ext_resource path="res://global/objects/treasure_chest.tscn" type="PackedScene" id=3]
[ext_resource path="res://global/objects/floor_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://global/objects/computer.tscn" type="PackedScene" id=5]
[ext_resource path="res://global/objects/huaweiRouter.tscn" type="PackedScene" id=6]
[ext_resource path="res://global/objects/monitor.tscn" type="PackedScene" id=7]
[ext_resource path="res://global/objects/table.tscn" type="PackedScene" id=8]
[ext_resource path="res://global/objects/genericRouter.tscn" type="PackedScene" id=9]
[ext_resource path="res://global/objects/ciscoRouter.tscn" type="PackedScene" id=10]
[ext_resource path="res://global/objects/switch.tscn" type="PackedScene" id=11]
[ext_resource path="res://global/objects/server.tscn" type="PackedScene" id=12]
[ext_resource path="res://global/objects/printer.tscn" type="PackedScene" id=13]
[ext_resource path="res://global/objects/chest.tscn" type="PackedScene" id=14]
[ext_resource path="res://global/objects/chest_rng.tscn" type="PackedScene" id=15]
[ext_resource path="res://global/Item_Select.gd" type="Script" id=16]
[ext_resource path="res://online_mode/level_editor/EditorPremade/item_btn.tscn" type="PackedScene" id=17]
[ext_resource path="res://global/objects/cube.tscn" type="PackedScene" id=18]
[ext_resource path="res://global/objects/worktable.tscn" type="PackedScene" id=19]

[node name="Item_Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -420.0
rect_pivot_offset = Vector2( 160, 150 )
script = ExtResource( 16 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.0
margin_right = 156.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 156, 100 )
script = ExtResource( 2 )

[node name="Furniture" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Furniture"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Furniture/ScrollContainer"]
margin_right = 154.0
margin_bottom = 92.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="cube" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_right = 67.0
margin_bottom = 20.0
text = "Cube"
this_scene = ExtResource( 18 )
placeOn = [ "floor" ]

[node name="floor_item" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 71.0
margin_right = 154.0
margin_bottom = 20.0
text = "Floor Item"
this_scene = ExtResource( 4 )
placeOn = [ "floor" ]

[node name="chest" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 24.0
margin_right = 67.0
margin_bottom = 44.0
text = "Chest"
this_scene = ExtResource( 14 )
placeOn = [ "floor" ]

[node name="worktable" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 71.0
margin_top = 24.0
margin_right = 154.0
margin_bottom = 44.0
text = "Work Table"
this_scene = ExtResource( 19 )
placeOn = [ "floor" ]

[node name="chest_rng" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
visible = false
margin_left = 71.0
margin_top = 24.0
margin_right = 151.0
margin_bottom = 44.0
text = "Chest RNG"
this_scene = ExtResource( 15 )
placeOn = [ "floor" ]

[node name="ball" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 48.0
margin_right = 67.0
margin_bottom = 68.0
text = "Ball"
this_scene = ExtResource( 1 )
placeOn = [ "floor" ]

[node name="table" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 71.0
margin_top = 48.0
margin_right = 154.0
margin_bottom = 68.0
text = "Table"
this_scene = ExtResource( 8 )
placeOn = [ "floor" ]

[node name="treasure" parent="TabContainer/Furniture/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 72.0
margin_right = 67.0
margin_bottom = 92.0
text = "Treasure"
this_scene = ExtResource( 3 )
placeOn = [ "floor" ]

[node name="Devices" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Devices"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Devices/ScrollContainer"]
margin_right = 204.0
margin_bottom = 92.0
grow_horizontal = 0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="pc_tower" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_right = 92.0
margin_bottom = 20.0
text = "PC Tower"
this_scene = ExtResource( 5 )
placeOn = [ "floor", "object_table" ]
height = 15.0

[node name="huawei" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 96.0
margin_right = 204.0
margin_bottom = 20.0
text = "Huawei Router"
this_scene = ExtResource( 6 )
placeOn = [ "object_table" ]
height = 15.0

[node name="computer" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 24.0
margin_right = 92.0
margin_bottom = 44.0
text = "Computer"
this_scene = ExtResource( 7 )
placeOn = [ "object_table" ]
height = 15.0

[node name="generic_router" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 96.0
margin_top = 24.0
margin_right = 204.0
margin_bottom = 44.0
text = "Generic Router"
this_scene = ExtResource( 9 )
placeOn = [ "object_table" ]
height = 15.0

[node name="cisco_router" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 68.0
text = "Cisco Router"
this_scene = ExtResource( 10 )
placeOn = [ "object_table" ]
height = 15.0

[node name="generic_switch" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 96.0
margin_top = 48.0
margin_right = 204.0
margin_bottom = 68.0
text = "Generic Switch"
this_scene = ExtResource( 11 )
placeOn = [ "object_table" ]
height = 15.0

[node name="server" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_top = 72.0
margin_right = 92.0
margin_bottom = 92.0
text = "Server"
this_scene = ExtResource( 12 )
placeOn = [ "floor" ]

[node name="printer" parent="TabContainer/Devices/ScrollContainer/GridContainer" instance=ExtResource( 17 )]
margin_left = 96.0
margin_top = 72.0
margin_right = 204.0
margin_bottom = 92.0
text = "Printer"
this_scene = ExtResource( 13 )
placeOn = [ "object_table" ]
height = 15.0

[node name="Done" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
rect_pivot_offset = Vector2( 50, 25 )
text = "DONE"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 54.0
margin_right = 76.0
margin_bottom = 98.0
text = "Currently Selected: Null"
align = 1
valign = 1

[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/Furniture/ScrollContainer" to="TabContainer" method="_on_ScrollContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Furniture/ScrollContainer" to="TabContainer" method="_on_ScrollContainer_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/Devices/ScrollContainer" to="TabContainer" method="_on_ScrollContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Devices/ScrollContainer" to="TabContainer" method="_on_ScrollContainer_mouse_exited"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
